--- a/UniDash.BLL/UniDash.BLL.csproj
+++ b/UniDash.BLL/UniDash.BLL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="Ninject.Web.Common" Version="3.3.1" />
   </ItemGroup>
